--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+* {
+  box-sizing: border-box;
+  --lighrgreen: #9df2ed;
+  --red: #ff7a7a;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +13,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button {
+  cursor: pointer;
 }
