Create RemainingAttemptsDisplay component

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,10 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.game-section {
+  background-color: antiquewhite;
+  padding: 1rem;
+  border-radius: var(--border-radius);
+  position: relative;
+}
