--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 * {
   box-sizing: border-box;
+  --white: #ffffff;
   --lighrgreen: #9df2ed;
   --red: #ff7a7a;
+  --border-radius: 4px;
 }
 
 body {
