--- a/src/components/Avatar/style.scss
+++ b/src/components/Avatar/style.scss
@@ -1,6 +1,8 @@
 .avatar-wrapper {
   width: 300px;
   margin: 0 auto;
+  border-radius: 999px;
+  background-color: var(--white);
 
   img {
     display: block;
