Isolate types and enums

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,7 @@
   --hint: #686868;
   --surface: #F9F8FF;
   --white: #ffffff;
-  --lighrgreen: #9df2ed;
+  --lightgreen: #9df2ed;
   --red: #ff7a7a;
   --border-radius: 4px;
 }
