--- a/src/components/WordInProgress/style.scss
+++ b/src/components/WordInProgress/style.scss
@@ -11,7 +11,7 @@
 .word-in-progress__item {
   font-size: 3rem;
   text-transform: uppercase;
-  width: 2.2rem;
+  width: 3rem;
   height: 4rem;
   border-bottom: 4px solid var(--primary);
   display: flex;
@@ -20,8 +20,29 @@
   text-align: center;
 }
 
+.word-in-progress__input {
+  border: 0;
+  width: 100%;
+  height: 100%;
+  font-size: inherit;
+  text-align: inherit;
+  text-transform: uppercase;
+  border-radius: var(--border-radius);
+  box-shadow: 0px;
+  transition: box-shadow 0.2 ease-in-out;
+
+  &:focus {
+    box-shadow: 0px 0px 0px 4px var(--primary);
+    outline: none;
+  }
+}
+
 .word-in-progress__item--has-dash {
   border-bottom: 0;
+}
+
+.word-in-progress__item--blocked {
+  opacity: 0.5;
 }
 
 .word-in-progress__item + .word-in-progress__item {
