--- a/src/index.scss
+++ b/src/index.scss
@@ -17,6 +17,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--surface);
+  line-height: 1.5;
 }
 
 button {
