--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,14 @@
 .container {
-  max-width: 45rem;
+  max-width: 34rem;
   margin-left: auto;
   margin-right: auto;
 }
 
+.container--small {
+  max-width: 30rem;
+}
+
+.ReactModal__Body--open,
+.ReactModal__Html--open {
+  overflow: hidden;
+}
