--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,6 +1,6 @@
 $primary: #09132D;
 $hint: #686868;
-$surface: #F9F8FF;
+$surface: #efecfb;
 $white: #ffffff;
 $lightgreen: #9df2ed;
 $red: #ff7a7a;
