--- a/src/components/Avatar/style.scss
+++ b/src/components/Avatar/style.scss
@@ -1,6 +1,6 @@
 .avatar-wrapper {
-  width: 300px;
-  height: 300px;
+  width: 200px;
+  height: 200px;
   margin: 0 auto;
   border-radius: 999px;
   background-color: var(--white);
@@ -28,4 +28,18 @@
   width: 100px;
   height: 100px;
   animation: rotating 2s linear infinite;
+}
+
+@media only screen and (min-width: 480px) {
+  .avatar-wrapper {
+    width: 250px;
+    height: 250px;
+  }
+}
+
+@media only screen and (min-width: 550px) {
+  .avatar-wrapper {
+    width: 300px;
+    height: 300px;
+  }
 }
