--- a/src/components/Key/style.scss
+++ b/src/components/Key/style.scss
@@ -1,5 +1,5 @@
 .key {
-  width: 3rem;
+  width: 9%;
   height: 3rem;
   padding: 0.5rem;
   display: flex;
@@ -10,29 +10,61 @@
   text-transform: uppercase;
   font-size: 1rem;
   background-color: white;
-  margin: 0.1rem;
+  margin: 0.05rem;
   font-weight: bold;
-  box-shadow: 4px 4px 0 var(--primary);
+  box-shadow: 2px 2px 0 var(--primary);
   transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
 
   &:hover {
-    box-shadow: 2px 2px 0 var(--primary);
-    transform: translate(2px, 2px);
+    box-shadow: 1px 1px 0 var(--primary);
+    transform: translate(1px, 1px);
   }
 
   &:active {
-    box-shadow: 1px 1px 0 var(--primary);
-    transform: translate(3px, 3px);
+    box-shadow: 0px 0px 0 var(--primary);
+    transform: translate(2px, 2px);
   }
 }
 
 .key--disable {
   pointer-events: none;
   background-color: var(--red);
-  box-shadow: 1px 1px 0 var(--primary);
-  transform: translate(3px, 3px);
+  box-shadow: 0px 0px 0 var(--primary);
+  transform: translate(1px, 1px);
 }
 
 .key--right-guess {
   background-color: var(--lightgreen);
 }
+
+@media only screen and (min-width: 480px) {
+  .key {
+    width: 2.5rem;
+    margin: 0.1rem;
+  }
+}
+
+@media only screen and (min-width: 550px) {
+  .key {
+    width: 3rem;
+    margin: 0.2rem;
+
+    box-shadow: 4px 4px 0 var(--primary);
+
+    &:hover {
+      box-shadow: 2px 2px 0 var(--primary);
+      transform: translate(2px, 2px);
+    }
+
+    &:active {
+      box-shadow: 1px 1px 0 var(--primary);
+      transform: translate(3px, 3px);
+    }
+  }
+
+  .key--disable {
+    box-shadow: 1px 1px 0 var(--primary);
+    transform: translate(3px, 3px);
+  }
+}
+
