--- a/src/components/Keyboard/style.scss
+++ b/src/components/Keyboard/style.scss
@@ -1,15 +1,15 @@
 .keyboard {
   list-style: none;
-  margin: 0;
+  margin: 0 -1rem;
   padding: 0;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
 }
 
 .keyboard__row {
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
+  width: 100%;
 }
 
 .keyboard--disabled {
