--- a/src/components/WordInProgress/style.scss
+++ b/src/components/WordInProgress/style.scss
@@ -3,48 +3,35 @@
   margin: 0;
   padding: 0;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: center;
-  margin-bottom: 1rem;
+  gap: 4px;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
 }
 
 .word-in-progress__item {
-  font-size: 3rem;
+  font-size: 1.5rem;
   text-transform: uppercase;
-  width: 3rem;
-  height: 4rem;
-  border-bottom: 4px solid var(--primary);
+  width: 100%;
+  height: 3rem;
+  border-bottom: 3px solid var(--primary);
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
-}
-
-.word-in-progress__input {
-  border: 0;
-  width: 100%;
-  height: 100%;
-  font-size: inherit;
-  text-align: inherit;
-  text-transform: uppercase;
-  border-radius: var(--border-radius);
-  box-shadow: 0px;
-  transition: box-shadow 0.2 ease-in-out;
-
-  &:focus {
-    box-shadow: 0px 0px 0px 4px var(--primary);
-    outline: none;
-  }
+  max-width: 2.5rem;
 }
 
 .word-in-progress__item--has-dash {
   border-bottom: 0;
 }
 
-.word-in-progress__item--blocked {
-  opacity: 0.5;
-}
-
-.word-in-progress__item + .word-in-progress__item {
-  margin-left: 8px;
+@media only screen and (min-width: 550px) {
+  .word-in-progress__item {
+    font-size: 3rem;
+    max-width: 4rem;
+    height: 4rem;
+    border-bottom: 4px solid var(--primary);
+  }
 }
