Separate buttons in Dialog comp

--- a/src/components/Dialog/style.scss
+++ b/src/components/Dialog/style.scss
@@ -5,6 +5,6 @@
 .dialog__footer {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-between;
   margin-top: 2rem;
 }
