--- a/src/components/Container/style.css
+++ b/src/components/Container/style.css
@@ -2,6 +2,8 @@
   max-width: 34rem;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .container--sm {
