--- a/src/components/Introduction/style.scss
+++ b/src/components/Introduction/style.scss
@@ -1,7 +1,13 @@
 .introduction {
-  padding-top: 5rem;
+  padding-top: 2rem;
+  padding-bottom: 3rem;
   margin: 0 auto;
   max-width: 400px;
+
+  @media screen and (min-width: 480px) {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
 }
 
 .introduction__icon {
