--- a/src/style/_elements.scss
+++ b/src/style/_elements.scss
@@ -12,17 +12,28 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--surface);
   line-height: 1.5;
 }
 
+body,
+input,
+textarea,
+button,
+select {
+  font-family: 'Inter', Helvetica, Arial, sans-serif;
+}
+
+
 button {
   cursor: pointer;
+}
+
+h1,
+h2 {
+  line-height: 1.2;
 }
 
 p a {
